# CDG-ConstructionAlgorithm

./: .gitignore  CMakeLists.txt  README.md  env.sh  package-lock.json
examples/: .gitignore  CMakeLists.txt  print_test_graph.sh  test.cpp
examples/test1/: cdg_after_initR.dot  cdg_after_mergeR.dot  dom._GLOBAL__sub_I_test.cpp.dot  dom._Z5guessi.dot  dom.__cxx_global_var_init.dot  dom.main.dot  icfg_final.dot  postdom._GLOBAL__sub_I_test.cpp.dot  postdom.__cxx_global_var_init.dot  postdom.main.dot  test.bc  test.c  test.ll  wz_final_cdg.dot  wz_initial_cdg.dot
examples/test2/: cdg_after_initR.dot  cdg_after_mergeR.dot  cfg.main.dot  icfg_final.dot  postdom.main.dot  test2.bc  test2.c  test2.ll  wz_final_cdg.dot  wz_initial_cdg.dot
examples/testResult/: cdg_after_initR.dot  cfg._Z5guessi.dot  icfg_final.dot  postdom._Z5guessi.dot  wz_icfg.dot  wz_initial_cdg.dot
examples/test_mulret/: cdg_after_initR.dot  cdg_after_mergeR.dot  cfg.main.dot  dfg.main.dot  postdom.main.dot  test_mulret.bc  test_mulret.c  test_mulret.ll  wz_final_cdg.dot  wz_initial_cdg.dot
include/: CDG.h  CDGBuilder.h  CDGEdge.h  CDGNode.h  CDmap.h
src/: .gitignore  CDG-Construct.cpp  CDG.cpp  CDGBuilder.cpp  CDmap.cpp  CMakeLists.txt  addRegionNode.cpp  findA2BInFunc.cpp  initCDG.cpp  main.cpp
